Added client for the led-firmware object
